# swaybot

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  SOUL.md  TODO.md  pyproject.toml
skills/: web_research.md
swaybot/: __init__.py  agent.py  api.py  async_agent.py  automation.py  brain.py  bus.py  cli.py  code_quality.py  context.py  coordinator.py  environment.py  events.py  explorer.py  hook.py  instructions.py  llm_brain.py  logging.py  mcp_client.py  memory.py  metrics.py  models.py  output_limits.py  plugin_loader.py  prompts.py  reflection.py  request_context.py  run_log.py  scheduler.py  sdk.py  security.py  session.py  skills.py  storage.py  subagent.py  tools.py
swaybot/prompts/: explore.j2  plan.j2  system.j2  user.j2
swaybot/tools/: __init__.py  fs.py  provider.py  shell.py  web.py
tests/: fake_mcp_server.py  test_agent.py  test_api.py  test_automation.py  test_bus.py  test_cli.py  test_code_quality.py  test_context.py  test_coordinator.py  test_events.py  test_explorer.py  test_fs.py  test_hook.py  test_hooks.py  test_instructions.py  test_llm_brain.py  test_logging.py  test_mcp_client.py  test_memory.py  test_metrics.py  test_models.py  test_output_limits.py  test_plugin_loader.py  test_prompts.py  test_reflection.py  test_run_log.py  test_scheduler.py  test_sdk.py  test_security.py  test_session.py  test_shell.py  test_skills.py  test_storage.py  test_subagent.py  test_tool_provider.py  test_tools.py  test_web.py
