[project]
name = "swaybot"
version = "0.1.0"
description = "A lightweight agent that learns to grow and evolve on its own."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "anwen"},
]

[project.optional-dependencies]
llm = ["openai", "jinja2"]
dev = ["pytest"]

[project.scripts]
swaybot = "swaybot.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swaybot*"]

[tool.setuptools.package-data]
swaybot = ["prompts/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
